<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <!--头部-->
    <com.example.org.Class.MyScrollView
        android:id="@+id/myScrollView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/gray">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="@color/headline">
                <Button

                    android:id="@+id/CancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/CancelBtn"
                    android:shadowColor="@color/headline"
                    />
                <TextView
                    android:id="@+id/EditItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/EditItem"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:shadowColor="@color/headline"/>
                <Button
                    android:id="@+id/SaveBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_alignParentRight="true"
                    android:shadowColor="@color/headline"
                    android:text="@string/SaveBtn"/>

            </RelativeLayout>
            <!--标题-->
            <LinearLayout
                android:background="@drawable/bg_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/Hello"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>
            </LinearLayout>
            <!--文件名-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_divider"
                android:layout_below="@id/title"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/org" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/Saveto"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/filename"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:hint="@string/newfile"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />

            </LinearLayout>
            <!--状态-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_divider">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/state"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/State"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/statebtn"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:hint="TODO"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
            <!--优先级-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_divider">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/priority"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="Priority"
                    android:textSize="20sp"
                    />
                <Button
                    android:id="@+id/prioritybtn"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="A"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <!--标签-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_divider">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/tag"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="Tags"
                    android:textSize="20sp"/>
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="+"
                    android:id="@+id/add"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/tagbtn"
                    android:text="temp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
            <!--开始时间-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_divider">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/date"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="Scheduled"
                    android:textSize="20sp"/>
                <Button
                    android:id="@+id/startbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="2019-10-30"/>

            </LinearLayout>
            <!--结束时间-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_divider">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/alarm"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="Deadline"
                    android:textSize="20sp"
                    />
                <Button
                    android:id="@+id/endbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="2019-10-30"/>

            </LinearLayout>
            <!--提醒时间-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_divider">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/alarm"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="Show on"
                    android:textSize="20sp" />
                <Button
                    android:id="@+id/remindbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="2019-10-30"/>

            </LinearLayout>
            <!--保存和编辑-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_divider"
                >
                <Button
                    android:id="@+id/notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Notes"
                    android:textSize="20sp"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/black"
                    />
                <Button
                    android:id="@+id/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Edit Notes"
                    android:layout_alignParentRight="true"

                    />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:gravity="center">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/note"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFFFFF"
                        android:hint="Add note here"
                        android:maxLines="5"
                        android:textSize="18sp"
                        android:visibility="invisible" />
                </ScrollView>
            </LinearLayout>
        </LinearLayout>
    </com.example.org.Class.MyScrollView>
</LinearLayout>